<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/heart"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/welcome_text_view"
            android:textSize="40sp" />

        <Button
            android:id="@+id/preWorkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_button"
            android:onClick="onPrevButtonClick"
            android:text="@string/previous_workout_button" />

        <Button
            android:id="@+id/newWorkoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_button"
            android:onClick="onNewButtonClick"
            android:text="@string/new_workout_button" />

        <Button
            android:id="@+id/showProgressButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:background="@drawable/custom_button"
            android:onClick="onProgressButtonClick"
            android:text="@string/show_progress_button" />

        <!-- uncomment this block of code for testing (autogenerates workouts) -->
<!--         <Button -->
<!--             android:id="@+id/dummy" -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_alignParentBottom="true" -->
<!--             android:layout_centerHorizontal="true" -->
<!--             android:layout_gravity="center_horizontal" -->
<!--             android:background="@drawable/custom_button" -->
<!--             android:onClick="onDummyClick" -->
<!--             android:text="TEST ME" /> -->
    </LinearLayout>

</RelativeLayout>